- Styling: fixed tag list spacing for v2.

--- a/RockWeb/Styles/styles-v2/rock-components/_tags.scss
+++ b/RockWeb/Styles/styles-v2/rock-components/_tags.scss
@@ -4,7 +4,7 @@
 
 
 // =============================================================
-// Table of Content           
+// Table of Content
 //  + Base Style
 //  + Tag input
 //  + Tag list
@@ -210,7 +210,7 @@
         background: rgba(0,0,0,0.05);
       }
 
-      > .ant-select-selector { 
+      > .ant-select-selector {
         border: 0px;
         padding: 0px;
         height: 22px;
@@ -239,6 +239,7 @@
 
 .tag-letterlist {
   color:              var(--color-interface-stronger);
+  margin-bottom:      var(--spacing-xsmall);
 
   li {
     margin-right:     var(--spacing-medium);
